tests/NormalTests/paczka1/fuzzy1/79342475.err
Error in line 2: anii A837 72,7
Error in line 5: Vag A160 27,9
Error in line 7: b4MoBOSn A703 66,9
Error in line 20: b4MoBOSn A703 43,2
Error in line 29: A837 A703 11,4
